--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                         <img src="img/jpg/2.jpg" alt="cart-pic" class="tabs__img">
                         <div class="tabs__text-wrap">
                             <div class="tabs__text-wrap">
-                                <p class="tabs__offer-sale">АФИША</p>
+                                <p class="tabs__offer-sale"></p>
                                 <p class="tabs__offer-text">Текст афиши</p>
                             </div>
                         </div>
